# rendering_demos

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json  vert.spv
assets/colored_suzanne/: suzanne.mtl
src/: app.cpp  app.h  application.cpp  application.h  common.h  gfx_context.cpp  gfx_context.h  glfw_platform.cpp  hot_reload.cpp  hot_reload.h  implementations.cpp  input.h  loader_gltf.cpp  main.cpp  platform.h  renderer.cpp  renderer.h  triangle.frag  triangle.vert  vulkan_utilities.cpp  vulkan_utilities.h
src/shaders/: line_frag.glsl  line_vert.glsl  shadow_pass_vert.glsl  triangle_frag.glsl  triangle_vert.glsl
